...
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.118"
            android:layout_marginLeft="8dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
...
                android:textSize="18sp"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="344dp"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/al_signInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_now"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
...
